--- a/angular-project/src/app/dashboard/dashboard.component.html
+++ b/angular-project/src/app/dashboard/dashboard.component.html
@@ -4,6 +4,9 @@
 			<mat-icon>menu</mat-icon>
 		</button>
 		<h1 class="app-name">{{title}}</h1>
+		<!-- <div>
+			<p>Register</p>
+		</div> -->
 	</mat-toolbar>
 	<mat-sidenav-container class="sidenav-container" [style.marginTop.px]="mobileQuery.matches ? 56 : 0">
 		<mat-sidenav #snav [mode]="'side'" [fixedInViewport]="mobileQuery.matches" fixedTopGap="56" opened>
