--- a/angular-project/src/app/user/user.component.html
+++ b/angular-project/src/app/user/user.component.html
@@ -74,10 +74,10 @@
 		</thead>
 		<tbody>
 			<tr *ngFor="let data of DataSource.data">
-				<td>{{data.nama}}</td>
+				<td>{{data.name}}</td>
 				<td>{{data.gender}}</td>
-				<td>{{data.address}}</td>
-				<td>{{data.bornDate}}</td>
+				<!-- <td>{{data.address}}</td> -->
+				<!-- <td>{{data.bornDate}}</td> -->
 				<td>{{data.email}}</td>
 				<td>{{data.notelp}}</td>
 				<td>{{data.username}}</td>
